feat: complete migration to postgres and stabilize backend startup

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,8 @@
 NODE_ENV=development
 PORT=5000
 
+# Database (PostgreSQL)
+DATABASE_URL=postgresql://postgres:aLfGENHwLNtfNPcHFqVjDIUhJaqfmtVn@postgres.railway.internal:5432/railway
+
 # Frontend Configuration
 REACT_APP_API_URL=http://localhost:5000
